--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -121,30 +121,33 @@
             </div>
         </div>
     </section>
-    <section id="contact" class='container-alt-gray'>
+        <section id="blog" class='container-alt-gray'>
         <div class="container">
-            <div class="row text-center ">
-                <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-                    <h2 class="head-set">SOCIAL MEDIA</h2>
+            <h2>BLOG</h2>
+            <div class="row">
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <i class="fa fa-comments  fa-5x"></i>
+                    <h4 class="head-set">Do You Need An App For That?</h4>
                     <p>
-                        We are social butterflies and we would love to hear from you.
+                        Recently, I was in the good company of a group of friends and acquaintances, enjoying some food, wine, and cigars. Towards the end of the evening, conversations shifted from sports, current events, religion and politics to business and technology by a couple of guys who were co-founders of a winery startup.
+                        <a href='http://bpcs.com/app.php'>Read more..</a>
                     </p>
-                    <br />
                 </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-12">
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://twitter.com/BlueprintCSLLC" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/pages/Blueprint-Consulting-Services-LLC/566844073359774" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
-                        </li>
-                        <li>
-                            <a href="http://www.linkedin.com/company/blueprint-consulting-services" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
-                    </ul>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <i class="fa fa-calendar  fa-5x"></i>
+                    <h4 class="head-set">Developing For After </h4>
+                    <p>
+                        During the application development process, we strive to meet the requirements of the customer. What often falls out of sight is the time after the application is deployed by the customer. Thinking past development is a key factor to success.
+                        <a href='http://bpcs.com/developing.php'>Read more..</a>
+                    </p>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <i class="fa fa-bolt  fa-5x"></i>
+                    <h4 class="head-set">Less Talking & More Listening</h4>
+                    <p>
+                        “The most basic of all human needs is the need to understand and to be understood. The best way to understand people is to listen to them.” -Dr. Ralph Nichols
+                        <a href='http://bpcs.com/listening.php'>Read more..</a>
+                    </p>
                 </div>
             </div>
         </div>
