--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -85,12 +85,17 @@
     </section>
     <!--WORKS / PORTFOLIO SECTION END  -->
     <section id='careers' class='container-alt'>
-        <div class="container">
-            <h2>CAREERS</h2>
-            <div class="row">
-                <div class="col-md-4">
+         <div class="container">
+            <h2>WHAT WE ARE DOING</h2>
+            <div class='row'>
+                <div class='col-md-3'>
+                    <h2 class='accent-heading'>Stuff going on in the field right now...</h2>
+                </div>
+                <div class='col-md-9'>
+                    <div class="col-md-6">
                     <div class='white-paper-entry'>
                         <div class='col-md-3'><i class="fa fa-road  fa-4x"></i></div>
+
                         <div class='col-md-8'>
                             <h4>Infrastructure Engineer</h4>
                             <p>Seattle, WA</p>
@@ -98,9 +103,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class='white-paper-entry'>
                         <div class='col-md-3'><i class="fa fa-flask  fa-4x"></i></div>
+
                         <div class='col-md-8'>
                             <h4>Software Developer II</h4>
                             <p>Bellevue, WA</p>
@@ -108,22 +114,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class='white-paper-entry'>
-                        <div class='col-md-3'><i class="fa fa-coffee  fa-4x"></i></div>
-                        <div class='col-md-8'>
-                            <h4>Java Engineer</h4>
-                            <p>Seattle, WA</p>
-                            <a href='https://jobs-bpcs.icims.com/jobs/1119/java-engineer/job?in_iframe=1'>View job</a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
     </section>
         <section id="blog" class='container-alt-gray'>
         <div class="container">
-            <h2>BLOG</h2>
+            <h2>WHAT WE ARE THINKING</h2>
             <div class="row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <i class="fa fa-comments  fa-5x"></i>
