--- a/bpcs-v3/team.html
+++ b/bpcs-v3/team.html
@@ -124,7 +124,7 @@
         <div class='col-md-8'>
             <div class="media">
               <div class="media-left">
-                   <iframe width="300" height="169" src="https://www.youtube.com/embed/c1jlmdkApTQ?rel=0" frameborder="0" allowfullscreen></iframe>
+                   <iframe id="vp1Jf5xq" title="Video Player" width="432" height="243" frameborder="0" src="https://s3.amazonaws.com/embed.animoto.com/play.html?w=swf/production/vp1&e=1431361707&f=Jf5xqpo4G7QOgAzCERFsgg&d=0&m=p&r=360p&volume=100&start_res=360p&i=m&asset_domain=s3-p.animoto.com&animoto_domain=animoto.com&options=" allowfullscreen></iframe>
               </div>
               <div class="media-body">
 
