--- a/bpcs-v3/connect.html
+++ b/bpcs-v3/connect.html
@@ -222,28 +222,26 @@
     </div>
     <section id="social" class='container-alt'>
         <div class="container">
-            <div class="row text-center ">
-                <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-                    <h2>SOCIAL MEDIA</h2>
-                    <p>
-                        We are social butterflies and we would love to hear from you.
-                    </p>
-                    <br />
-                </div>
+            <div class="row ">
+                <h2>SOCIAL MEDIA</h2>
             </div>
-            <div class="row text-center">
+            <div class="row">
                 <div class="col-md-12">
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://twitter.com/BlueprintCSLLC" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/pages/Blueprint-Consulting-Services-LLC/566844073359774" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
-                        </li>
-                        <li>
-                            <a href="http://www.linkedin.com/company/blueprint-consulting-services" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
-                    </ul>
+                <div class='row'>
+                    <div class='col-md-4'>
+                        <i class="fa fa-twitter fa-fw fa-5x social-overlay"></i>
+                        <img src="assets/img/twitter.png" class='img-responsive img-rounded'>
+                    </div>
+                    <div class='col-md-4'>
+                        <i class="fa fa-facebook fa-fw fa-5x social-overlay"></i>
+                        <img src="assets/img/facebook.png" class='img-responsive img-rounded'>
+                    </div>
+                    <div class='col-md-4'>
+                        <i class="fa fa-linkedin fa-fw fa-5x social-overlay"></i>
+                        <img src="assets/img/linkedin.png" class='img-responsive img-rounded'>
+                    </div>
+                </div>
+                   
                 </div>
             </div>
         </div>
