--- a/bpcs-v3/connect.html
+++ b/bpcs-v3/connect.html
@@ -228,18 +228,24 @@
             <div class="row">
                 <div class="col-md-12">
                 <div class='row'>
+                    <a href="https://twitter.com/BlueprintCSLLC">
                     <div class='col-md-4'>
                         <i class="fa fa-twitter fa-fw fa-5x social-overlay"></i>
                         <img src="assets/img/twitter.png" class='img-responsive img-rounded'>
                     </div>
+                    </a>
+                    <a href="https://www.facebook.com/pages/Blueprint-Consulting-Services-LLC/566844073359774">
                     <div class='col-md-4'>
                         <i class="fa fa-facebook fa-fw fa-5x social-overlay"></i>
                         <img src="assets/img/facebook.png" class='img-responsive img-rounded'>
                     </div>
+                    </a>
+                    <a href="http://www.linkedin.com/company/blueprint-consulting-services">
                     <div class='col-md-4'>
                         <i class="fa fa-linkedin fa-fw fa-5x social-overlay"></i>
                         <img src="assets/img/linkedin.png" class='img-responsive img-rounded'>
                     </div>
+                    </a>
                 </div>
                    
                 </div>
