--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -85,7 +85,7 @@
     </section>
     <!--WORKS / PORTFOLIO SECTION END  -->
     <section id='careers' class='container-alt'>
-         <div class="container">
+        <div class="container">
             <h2>WHAT WE ARE DOING</h2>
             <div class='row'>
                 <div class='col-md-3'>
@@ -93,32 +93,43 @@
                 </div>
                 <div class='col-md-9'>
                     <div class="col-md-6">
-                    <div class='white-paper-entry'>
-                        <div class='col-md-3'><i class="fa fa-road  fa-4x"></i></div>
-
-                        <div class='col-md-8'>
-                            <h4>Infrastructure Engineer</h4>
-                            <p>Seattle, WA</p>
-                            <a href='https://jobs-bpcs.icims.com/jobs/1120/infrastructure-engineer/job?in_iframe=1'>View job</a>
+                        <div class='white-paper-entry'>
+                           
+                            <div class='col-md-12'>
+                                <h4>Infrastructure Engineer</h4>
+                                <p>John Smith</p>
+                                 <img class='img-responsive img-rounded' src='https://pbs.twimg.com/media/B8oNbDeCUAAcGmK.jpg:large'>
+                                <br>
+                                <blockquote>
+                                    <p>I am building Windows 11...</p>
+                                    <footer>
+                                        <cite title="Source Title">John Smith</cite>
+                                    </footer>
+                                </blockquote>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class='white-paper-entry'>
-                        <div class='col-md-3'><i class="fa fa-flask  fa-4x"></i></div>
-
-                        <div class='col-md-8'>
-                            <h4>Software Developer II</h4>
-                            <p>Bellevue, WA</p>
-                            <a href='https://jobs-bpcs.icims.com/jobs/1122/software-developer-ii/job?in_iframe=1'>View job</a>
+                    <div class="col-md-6">
+                        <div class='white-paper-entry'>
+                            <div class='col-md-12'>
+                                <h4>Software Developer II</h4>
+                                <p>John Smith Jr</p>
+                                <img class='img-responsive img-rounded' src='https://scontent-sea.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/11188462_938357369541774_2194566664597813501_n.jpg?oh=c37a49c63e62e8a7f865e6140f863047&oe=55CE0D58'>
+                                <br>
+                                <blockquote>
+                                    <p>I built Office 365</p>
+                                    <footer>
+                                        <cite title="Source Title">John Smith</cite>
+                                    </footer>
+                                </blockquote>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
             </div>
         </div>
     </section>
-        <section id="blog" class='container-alt-gray'>
+    <section id="blog" class='container-alt-gray'>
         <div class="container">
             <h2>WHAT WE ARE THINKING</h2>
             <div class="row">
@@ -160,33 +171,32 @@
         </div>
     </section>
     <footer class='site-footer'>
-            <div class='col-md-4 footer-block'>
-                <h3>Site Navigation</h3>
-                <ul class='mine'>
-                    <li><i class="fa fa-home fa-fw"></i><a href="index.html">Home</a></li>
-                    <li><i class="fa fa-pied-piper fa-fw"></i><a href="work.html">Solutions</a></li>
-                    <li><i class="fa fa-users fa-fw"></i><a href="team.html">Team</a></li>
-                    <li><i class="fa fa-envelope fa-fw"></i><a href="connect.html">Connect</a></li>
-                </ul>
-            </div>
-            <div class='col-md-4 footer-block'>
-                <h3>Social</h3>
-                <ul class="banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/BlueprintCSLLC"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/pages/Blueprint-Consulting-Services-LLC/566844073359774"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
-                    </li>
-                    <li>
-                        <a href="http://www.linkedin.com/company/blueprint-consulting-services"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                    </li>
-                </ul>
-            </div>
-            <div class='col-md-4 footer-block'>
-                <h3>Contact Us</h3>
-            </div>
-        
+        <div class='col-md-4 footer-block'>
+            <h3>Site Navigation</h3>
+            <ul class='mine'>
+                <li><i class="fa fa-home fa-fw"></i><a href="index.html">Home</a></li>
+                <li><i class="fa fa-pied-piper fa-fw"></i><a href="work.html">Solutions</a></li>
+                <li><i class="fa fa-users fa-fw"></i><a href="team.html">Team</a></li>
+                <li><i class="fa fa-envelope fa-fw"></i><a href="connect.html">Connect</a></li>
+            </ul>
+        </div>
+        <div class='col-md-4 footer-block'>
+            <h3>Social</h3>
+            <ul class="banner-social-buttons">
+                <li>
+                    <a href="https://twitter.com/BlueprintCSLLC"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/pages/Blueprint-Consulting-Services-LLC/566844073359774"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                </li>
+                <li>
+                    <a href="http://www.linkedin.com/company/blueprint-consulting-services"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                </li>
+            </ul>
+        </div>
+        <div class='col-md-4 footer-block'>
+            <h3>Contact Us</h3>
+        </div>
         <div class='col-md-12 col-md-3-offset'>© 2015 bpcs.com | All Rights Reserved.</div>
     </footer>
     <!-- FOOTER SECTION END-->
