--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -133,7 +133,11 @@
         <div class="container">
             <h2>WHAT WE ARE THINKING</h2>
             <div class="row">
-                <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class='col-md-3'>
+                    <h2 class='accent-heading'>What it's like inside our minds...</h2>
+                </div>
+                <div class='col-md-9'>
+                <div class="col-md-6 col-sm-6 col-xs-12">
                     <i class="fa fa-comments  fa-5x"></i>
                     <h4 class="head-set">Do You Need An App For That?</h4>
                     <p>
@@ -141,7 +145,7 @@
                         <a href='http://bpcs.com/app.php'>Read more..</a>
                     </p>
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                     <i class="fa fa-calendar  fa-5x"></i>
                     <h4 class="head-set">Developing For After </h4>
                     <p>
@@ -149,13 +153,7 @@
                         <a href='http://bpcs.com/developing.php'>Read more..</a>
                     </p>
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-12">
-                    <i class="fa fa-bolt  fa-5x"></i>
-                    <h4 class="head-set">Less Talking & More Listening</h4>
-                    <p>
-                        “The most basic of all human needs is the need to understand and to be understood. The best way to understand people is to listen to them.” -Dr. Ralph Nichols
-                        <a href='http://bpcs.com/listening.php'>Read more..</a>
-                    </p>
+                
                 </div>
             </div>
         </div>
