--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -98,7 +98,7 @@
                             <div class='col-md-12'>
                                 <h4>Infrastructure Engineer</h4>
                                 <p>John Smith</p>
-                                 <img class='img-responsive img-rounded' src='https://pbs.twimg.com/media/B8oNbDeCUAAcGmK.jpg:large'>
+                                 <img class='img-responsive img-rounded' src='assets/img/johnSmith.jpeg'>
                                 <br>
                                 <blockquote>
                                     <p>I am building Windows 11...</p>
@@ -114,12 +114,12 @@
                             <div class='col-md-12'>
                                 <h4>Software Developer II</h4>
                                 <p>John Smith Jr</p>
-                                <img class='img-responsive img-rounded' src='https://scontent-sea.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/11188462_938357369541774_2194566664597813501_n.jpg?oh=c37a49c63e62e8a7f865e6140f863047&oe=55CE0D58'>
+                                <img class='img-responsive img-rounded' src='assets/img/johnSmithJr.jpeg'>
                                 <br>
                                 <blockquote>
-                                    <p>I built Office 365</p>
+                                    <p>I built Office 365. I also invented the Internet...and discovered America.</p>
                                     <footer>
-                                        <cite title="Source Title">John Smith</cite>
+                                        <cite title="Source Title">John Smith Jr</cite>
                                     </footer>
                                 </blockquote>
                             </div>
