--- a/bpcs-v3/connect.html
+++ b/bpcs-v3/connect.html
@@ -347,7 +347,8 @@
     </section>
     <!-- CLIENTS SECTION END-->
     <footer class='site-footer'>
-            <div class='col-md-4 footer-block'>
+        <div class='col-md-offset-3'>
+            <div class='col-md-3 footer-block'>
                 <h3>Site Navigation</h3>
                 <ul class='mine'>
                     <li><i class="fa fa-home fa-fw"></i><a href="index.html">Home</a></li>
@@ -356,7 +357,7 @@
                     <li><i class="fa fa-envelope fa-fw"></i><a href="connect.html">Connect</a></li>
                 </ul>
             </div>
-            <div class='col-md-4 footer-block'>
+            <div class='col-md-3 footer-block'>
                 <h3>Social</h3>
                 <ul class="banner-social-buttons">
                     <li>
@@ -370,11 +371,13 @@
                     </li>
                 </ul>
             </div>
-            <div class='col-md-4 footer-block'>
+            <div class='col-md-3 footer-block'>
                 <h3>Contact Us</h3>
             </div>
-        
+        </div>
+        <div class='row'>
         <div class='col-md-12 col-md-3-offset'>© 2015 bpcs.com | All Rights Reserved.</div>
+        </div>
     </footer>
     <!-- FOOTER SECTION END-->
     <!-- REQUIRED SCRIPTS FILES -->
