--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -94,11 +94,10 @@
                 <div class='col-md-9'>
                     <div class="col-md-6">
                         <div class='white-paper-entry'>
-                           
                             <div class='col-md-12'>
                                 <h4>Infrastructure Engineer</h4>
                                 <p>John Smith</p>
-                                 <img class='img-responsive img-rounded' src='assets/img/johnSmith.jpeg'>
+                                <img class='img-responsive img-rounded' src='assets/img/johnSmith.jpeg'>
                                 <br>
                                 <blockquote>
                                     <p>I am building Windows 11...</p>
@@ -137,23 +136,22 @@
                     <h2 class='accent-heading'>What it's like inside our minds...</h2>
                 </div>
                 <div class='col-md-9'>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                    <i class="fa fa-comments  fa-5x"></i>
-                    <h4 class="head-set">Do You Need An App For That?</h4>
-                    <p>
-                        Recently, I was in the good company of a group of friends and acquaintances, enjoying some food, wine, and cigars. Towards the end of the evening, conversations shifted from sports, current events, religion and politics to business and technology by a couple of guys who were co-founders of a winery startup.
-                        <a href='http://bpcs.com/app.php'>Read more..</a>
-                    </p>
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                    <i class="fa fa-calendar  fa-5x"></i>
-                    <h4 class="head-set">Developing For After </h4>
-                    <p>
-                        During the application development process, we strive to meet the requirements of the customer. What often falls out of sight is the time after the application is deployed by the customer. Thinking past development is a key factor to success.
-                        <a href='http://bpcs.com/developing.php'>Read more..</a>
-                    </p>
-                </div>
-                
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <i class="fa fa-comments  fa-5x"></i>
+                        <h4 class="head-set">Do You Need An App For That?</h4>
+                        <p>
+                            Recently, I was in the good company of a group of friends and acquaintances, enjoying some food, wine, and cigars. Towards the end of the evening, conversations shifted from sports, current events, religion and politics to business and technology by a couple of guys who were co-founders of a winery startup.
+                            <a href='http://bpcs.com/app.php'>Read more..</a>
+                        </p>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <i class="fa fa-calendar  fa-5x"></i>
+                        <h4 class="head-set">Developing For After </h4>
+                        <p>
+                            During the application development process, we strive to meet the requirements of the customer. What often falls out of sight is the time after the application is deployed by the customer. Thinking past development is a key factor to success.
+                            <a href='http://bpcs.com/developing.php'>Read more..</a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -169,33 +167,37 @@
         </div>
     </section>
     <footer class='site-footer'>
-        <div class='col-md-4 footer-block'>
-            <h3>Site Navigation</h3>
-            <ul class='mine'>
-                <li><i class="fa fa-home fa-fw"></i><a href="index.html">Home</a></li>
-                <li><i class="fa fa-pied-piper fa-fw"></i><a href="work.html">Solutions</a></li>
-                <li><i class="fa fa-users fa-fw"></i><a href="team.html">Team</a></li>
-                <li><i class="fa fa-envelope fa-fw"></i><a href="connect.html">Connect</a></li>
-            </ul>
+        <div class='col-md-offset-3'>
+            <div class='col-md-3 footer-block'>
+                <h3>Site Navigation</h3>
+                <ul class='mine'>
+                    <li><i class="fa fa-home fa-fw"></i><a href="index.html">Home</a></li>
+                    <li><i class="fa fa-pied-piper fa-fw"></i><a href="work.html">Solutions</a></li>
+                    <li><i class="fa fa-users fa-fw"></i><a href="team.html">Team</a></li>
+                    <li><i class="fa fa-envelope fa-fw"></i><a href="connect.html">Connect</a></li>
+                </ul>
+            </div>
+            <div class='col-md-3 footer-block'>
+                <h3>Social</h3>
+                <ul class="banner-social-buttons">
+                    <li>
+                        <a href="https://twitter.com/BlueprintCSLLC"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/pages/Blueprint-Consulting-Services-LLC/566844073359774"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                    </li>
+                    <li>
+                        <a href="http://www.linkedin.com/company/blueprint-consulting-services"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                    </li>
+                </ul>
+            </div>
+            <div class='col-md-3 footer-block'>
+                <h3>Contact Us</h3>
+            </div>
         </div>
-        <div class='col-md-4 footer-block'>
-            <h3>Social</h3>
-            <ul class="banner-social-buttons">
-                <li>
-                    <a href="https://twitter.com/BlueprintCSLLC"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/pages/Blueprint-Consulting-Services-LLC/566844073359774"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
-                </li>
-                <li>
-                    <a href="http://www.linkedin.com/company/blueprint-consulting-services"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                </li>
-            </ul>
-        </div>
-        <div class='col-md-4 footer-block'>
-            <h3>Contact Us</h3>
-        </div>
+        <div class='row'>
         <div class='col-md-12 col-md-3-offset'>© 2015 bpcs.com | All Rights Reserved.</div>
+        </div>
     </footer>
     <!-- FOOTER SECTION END-->
     <!-- REQUIRED SCRIPTS FILES -->
