--- a/aptus-site/index.html
+++ b/aptus-site/index.html
@@ -56,17 +56,17 @@
 				<div class="row">
 					<div class="col-md-4 col-sm-6">
 						<div class="in-press">
-							<a href="#">Aptus Group is the greatest thing since sliced apple pie.</a>
+							<a href="#">"Aptus Group is the greatest thing since sliced apple pie."</a>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<div class="in-press">
-							<a href="#">Aptus Group makes me happy.</a>
+							<a href="#">"Aptus Group makes me happy."</a>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<div class="in-press">
-							<a href="#">Aptus Group does some awesome stuff.</a>
+							<a href="#">"Aptus Group does some awesome stuff."</a>
 						</div>
 					</div>
 				</div>
