--- a/aptus-site/index.html
+++ b/aptus-site/index.html
@@ -17,8 +17,8 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/leaflet.css" />
     <!--[if lte IE 8]>
-		    <link rel="stylesheet" href="css/leaflet.ie.css" />
-		<![endif]-->
+            <link rel="stylesheet" href="css/leaflet.ie.css" />
+        <![endif]-->
     <link rel="stylesheet" href="css/main.css">
     <script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
@@ -45,11 +45,12 @@
     <!-- Homepage Slider -->
     <div class="homepage-hero">
         <div class='cover'>
-            <h3>Aptus Group is all about some stuff</h3>
+            <h3>Superior performance, exceptional results</h3>
         </div>
     </div>
     <!-- End Homepage Slider -->
     <!-- Press Coverage -->
+    <!--
     <div class="section">
         <div class="container">
             <div class="row">
@@ -71,30 +72,38 @@
             </div>
         </div>
     </div>
+    -->
     <!-- Press Coverage -->
     <!-- Services -->
+    <div class="section">
+        <div class="container">
+                <p>Aptus Group is an IT consulting group based in Bellevue, Washington. We provide excellent resources for any technical or business need. Our teams of exceptional individuals help our clients achieve their business goals and fulfill their technology needs. We support our client leaders by pairing them with exceptional people, proper support, and superior results.</p>
+        </div>
+    </div>
+
+
     <div class="section">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-sm-6">
                     <div class="service-wrapper">
                         <img src="img/service-icon/diamond.png" alt="Service 1">
-                        <h3>Service 1</h3>
-                        <p>Praesent rhoncus mauris ac sollicitudin vehicula. Nam fringilla turpis turpis, at posuere turpis aliquet sit amet condimentum</p>
+                        <h3>IT Staffing Solutions</h3>
+                        <p>Our group of competent consultants make an immediate impact on your business success.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="service-wrapper">
                         <img src="img/service-icon/ruler.png" alt="Service 2">
-                        <h3>Service 2</h3>
-                        <p>Suspendisse eget libero mi. Fusce ligula orci, vulputate nec elit ultrices, ornare faucibus orci. Aenean lectus sapien, vehicula</p>
+                        <h3>IT Managed Services</h3>
+                        <p>We run the business functions outside of your core competencies to improve the service quality and reduce cost.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="service-wrapper">
                         <img src="img/service-icon/box.png" alt="Service 3">
-                        <h3>Service 3</h3>
-                        <p>Phasellus posuere et nisl ac commodo. Nulla facilisi. Sed tincidunt bibendum cursus. Aenean vulputate aliquam risus rutrum scelerisque</p>
+                        <h3>Talent Acquisition Services</h3>
+                        <p>The Aptus Group recruiters can manage your recruitment process to find you the best talent to build your team.</p>
                     </div>
                 </div>
             </div>
@@ -105,19 +114,11 @@
     <div class="section">
         <div class="container">
             <h2>About Aptus Group</h2>
-            <div class="row">
-                Need some content here
-            </div>
+                <p>We understand that business leaders want a business partner that understand the simple proposition to get work done faster, better, and more efficiently. Our teams help you achieve your business goals by understanding the underlying business problem you’re trying to solve and filling the gaps with exceptionally talented people. The Aptus Group pairs always you with the best people for your job.</p>
+                <p>When you want to hire employees permanently or on a contract basis, we provide the right scalable staffing strategy for your business and implement it quickly and efficiently. Whether you want to build a large-scale managed services team or you want to augment an existing high-performing team, we deliver you the best talent in an increasingly competitive market.</p>
         </div>
     </div>
     <!-- End Testimonials -->
-    <!-- Pricing Table -->
-    <div class="section">
-        <div class="container">
-            <h2>Aptus Group Founders</h2>
-        </div>
-    </div>
-    <!-- End Pricing Table -->
     <!-- Footer -->
     <div class="footer">
         <div class="container">
@@ -127,24 +128,13 @@
                     <p class="contact-us-details">
                         <b>Address:</b> Bellevue, Washington
                         <br/>
-                        <b>Phone:</b> +111.111.1111
+                        <b>Phone:</b> 206.455.8326
                         <br/>
-                        <b>Email:</b> <a href="mailto:getintoutch@yourcompanydomain.com">yoyo@aptusgroup.com</a>
+                        <b>Email:</b> <a href="mailto:info@aptusgrp.com">info@aptusgrp.com</a>
                     </p>
                 </div>
                 <div class="col-footer col-md-2 col-xs-6">
-                    <h3>Stay Connected</h3>
-                    <ul class="footer-stay-connected no-list-style">
-                        <li>
-                            <a href="#" class="facebook"></a>
-                        </li>
-                        <li>
-                            <a href="#" class="twitter"></a>
-                        </li>
-                        <li>
-                            <a href="#" class="googleplus"></a>
-                        </li>
-                    </ul>
+                    
                 </div>
             </div>
             <div class="row">
