--- a/aptus-site/index.html
+++ b/aptus-site/index.html
@@ -33,7 +33,7 @@
             <nav id="mainmenu" class="mainmenu">
                 <ul>
                     <li class="logo-wrapper">
-                        <a href="index.html"><img src="img/aptus_horizontal.png" alt="Multipurpose Twitter Bootstrap Template"></a>
+                        <a href="index.html"><img src="img/aptus_horizontal.png" alt="Aptus Group"></a>
                     </li>
                     <li class="active">
                         <a href="index.html">Home</a>
@@ -45,7 +45,9 @@
     <!-- Homepage Slider -->
     <div class="homepage-hero">
         <div class='cover'>
-            <h3>Superior performance, exceptional results</h3>
+            <h3 class='sales-copy rotate0'>Superior performance, exceptional results</h3>
+            <h3 class='sales-copy rotate1'>A leading provider of IT staffing, IT talent management and IT services</h3>
+            <h3 class='sales-copy rotate2'>Empower, Augment, Enable</h3>
         </div>
     </div>
     <!-- End Homepage Slider -->
