--- a/bpcs-v3/team.html
+++ b/bpcs-v3/team.html
@@ -183,6 +183,32 @@
 
         </div>
 
+        <div class="row">
+            <div class="col-md-3">
+                <div class='team-box'>
+                    <div class='col-md-6'>
+                    <img src="http://bpcs.com/img/casey_pic.jpg" alt="" class="img-responsive img-circle" />
+                    </div>
+                    <h3>Casey Bayless</h3>
+                    <h4>Recruiting Manager</h4>
+                    <div class='text-content'>
+                        <p>Casey has more than ten years of management & recruiting experience supporting client groups in a Fortune 500 environment after earning a Bachelor of Arts in Accounting and Information Systems from Washington State University. He has expertise in working with geographically dispersed and operationally decentralized organizations and provides recruitment capability, strategic direction and recommended solutions for talent acquisition projects.</p>
+                        </div>
+                        <div class='links'>
+                            <ul>
+                            <li>
+                                <a href="https://www.linkedin.com/profile/view?id=29151923&authType=NAME_SEARCH&authToken=Oynf&locale=en_US&srchid=2204932711409177780913&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2204932711409177780913%2CVSRPtargetId%3A29151923%2CVSRPcmpt%3Aprimary"><i class="fa fa-linkedin fa-2x"></i> <span class="network-name"></span></a>
+                            </li>
+                            </ul>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+        </div>
+
     </div>
     </section>
 
