--- a/bpcs-v3/connect.html
+++ b/bpcs-v3/connect.html
@@ -196,7 +196,7 @@
     </div>
     <!-- NAVBAR CODE END -->
     <!--HOME SECTION END  -->
-    <div id="connect">
+    <div id="connect" class='hero-control'>
         <div class="overlay">
             <!-- overylay class usage -->
             <div class="container">
