--- a/bpcs-v3/team.html
+++ b/bpcs-v3/team.html
@@ -48,7 +48,7 @@
     </div>
     <!-- NAVBAR CODE END -->
     <!--HOME SECTION END  -->
-    <div id="team">
+    <div id="team" class='hero-control'>
         <div class="overlay">
             <!-- overylay class usage -->
             <div class="container">
@@ -78,7 +78,7 @@
     <!--SERVICES SECTION END  -->
     
     <!--WORKS / PORTFOLIO SECTION END  -->
-    <section id='leadership' class='container-alt-gray'>
+    <section id='leadership' class='container-alt-gray hero'>
     <div class="container">
         <h2>LEADERSHIP</h2>
         <div class="row">
