--- a/bpcs-v3/work.html
+++ b/bpcs-v3/work.html
@@ -48,7 +48,7 @@
     </div>
     <!-- NAVBAR CODE END -->
     <!--HOME SECTION END  -->
-    <div id="solutions">
+    <div id="solutions" class='hero-control'>
         <div class="overlay">
             <!-- overylay class usage -->
             <div class="container">
