--- a/bpcs-v3/index.html
+++ b/bpcs-v3/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
     <!-- NAVBAR CODE END -->
-    <div id="home">
+    <div id="home" class='hero-control'>
         <div class="container">
             <div class="col-md-8 col-md-offset-2 text-center">
                 <h1>IDEAS</h1>
