--- a/aptus-site/index.html
+++ b/aptus-site/index.html
@@ -38,6 +38,9 @@
                     <li class="active">
                         <a href="index.html">Home</a>
                     </li>
+                    <li>
+                        <a href="#careers">Careers</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -75,8 +78,7 @@
         </div>
     </div>
     -->
-    <!-- Press Coverage -->
-    <!-- Services -->
+
     <div class="section">
         <div class="container">
                 <p>Aptus Group is an IT consulting group based in Bellevue, Washington. We provide excellent resources for any technical or business need. Our teams of exceptional individuals help our clients achieve their business goals and fulfill their technology needs. We support our client leaders by pairing them with exceptional people, proper support, and superior results.</p>
@@ -111,8 +113,31 @@
             </div>
         </div>
     </div>
-    <!-- End Services -->
-    <!-- Testimonials -->
+
+    <div class="section" id='careers'>
+        <div class="container">
+        <h2>Careers</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class='card1'>
+                        <h3>Technical Recruiter</h3>
+                        <p>Short description here</p>
+                        <a href='#'>Apply Today</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class='card1'>
+                        <h3>Source In Recruiter</h3>
+                        <p>Short description here</p>
+                        <a href='#'>Apply Today</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <div class="section">
         <div class="container">
             <h2>About Aptus Group</h2>
@@ -120,7 +145,7 @@
                 <p>When you want to hire employees permanently or on a contract basis, we provide the right scalable staffing strategy for your business and implement it quickly and efficiently. Whether you want to build a large-scale managed services team or you want to augment an existing high-performing team, we deliver you the best talent in an increasingly competitive market.</p>
         </div>
     </div>
-    <!-- End Testimonials -->
+
     <!-- Footer -->
     <div class="footer">
         <div class="container">
@@ -156,7 +181,6 @@
     <script src="js/jquery.fitvids.js"></script>
     <script src="js/jquery.sequence-min.js"></script>
     <script src="js/jquery.bxslider.js"></script>
-    <script src="js/main-menu.js"></script>
     <script src="js/template.js"></script>
 </body>
 
