--- a/register/index.html
+++ b/register/index.html
@@ -5,10 +5,33 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://bootswatch.com/flatly/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script>
+    $(document).ready(function() {
+
+        //just a little something to change up the content
+        var randomnDisplay = ".rotate" + Math.floor(Math.random() * 3);
+        $(randomnDisplay).show(100);
+
+
+        $('a[href^="#"]').on('click', function(event) {
+            var target = $(this).attr('href');
+            console.log(target);
+            if (target.length) {
+                event.preventDefault();
+                $('html, body').animate({
+                    scrollTop: $(target).offset().top
+                }, 1000);
+            }
+        });
+
+
+    });
+    </script>
 </head>
 
 <body>
-    <div class='notification text-center bg-primary'>
+    <div class='notification text-center bg-primary' id='top'>
         <p class="">Read: <a href='#'><i>Knowing "The Who" Will Save You Time</i> - a note from our team</a></p>
     </div>
     <div class='hero'>
@@ -18,7 +41,7 @@
             <h4>You have questions. Who to contact shouldn't be one of them.</h4>
             <img src='img/logo.png' class='center-block img-responsive logo' />
             <button type="button" class="btn btn-warning btn-lg">Get free beta access</button>
-            <p>Want to learn more? <a href='#'>Check out our features.</a></p>
+            <p>Want to learn more? <a href='#features'>Check out our features.</a></p>
         </div>
     </div>
     <div class='container page-quote'>
@@ -34,10 +57,7 @@
             </div>
         </div>
     </div>
-    <div class='bg-alt'>
-        
-
-
+    <div class='bg-alt' id='features'>
         <div class='container'>
             <div class='col-md-10 col-md-offset-1 text-center'>
                 <h3>Register.io is a project contact management tool that answers the question <br>"Who should I contact about X?"</h3>
@@ -66,9 +86,7 @@
             <div class="col-lg-12">
                 <ul class="list-unstyled">
                     <li class="pull-right"><a href="#top">Back to top</a></li>
-                    <li><a href="http://news.bootswatch.com" onclick="pageTracker._link(this.href); return false;">Blog</a></li>
                 </ul>
-                <p>Made by <a href="#" rel="nofollow">Gary Nakanelua</a>. Contact him at <a href="mailto:#">gnakan@bpcs.com</a>.</p>
             </div>
         </div>
     </footer>
