--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -112,7 +112,7 @@
             <div class="col-md-3">
                 <div class='team-box'>
                     <div class='col-md-6'>
-                    <img src="http://bpcs.com/img/kyle_pic.jpg" alt="" class="img-responsive img-circle" />
+                    <img src="assets/img/kyle_pic.jpg" alt="" class="img-responsive img-circle" />
                     </div>
                     <h3>Kyle Wagner</h3>
                     <h4>VP of Operations</h4>
@@ -140,7 +140,7 @@
             <div class="col-md-3">
                 <div class='team-box'>
                     <div class='col-md-6'>
-                    <img src="http://bpcs.com/img/jesse_pic.jpg" alt="" class="img-responsive img-circle" />
+                    <img src="assets/img/jesse_pic.jpg" alt="" class="img-responsive img-circle" />
                     </div>
                     <h3>Jesse Perbix</h3>
                     <h4>VP of Finance</h4>
@@ -161,7 +161,7 @@
             <div class="col-md-3">
                 <div class='team-box'>
                     <div class='col-md-6'>
-                    <img src="http://bpcs.com/img/danielle_pic.jpg" alt="" class="img-responsive img-circle" />
+                    <img src="assets/img/danielle_pic.jpg" alt="" class="img-responsive img-circle" />
                     </div>
                     <h3>Danielle Funston</h3>
                     <h4>Business Manager</h4>
@@ -187,7 +187,7 @@
             <div class="col-md-3">
                 <div class='team-box'>
                     <div class='col-md-6'>
-                    <img src="http://bpcs.com/img/casey_pic.jpg" alt="" class="img-responsive img-circle" />
+                    <img src="assets/img/casey_pic.jpg" alt="" class="img-responsive img-circle" />
                     </div>
                     <h3>Casey Bayless</h3>
                     <h4>Recruiting Manager</h4>
@@ -207,10 +207,10 @@
             <div class="col-md-3">
                 <div class='team-box'>
                     <div class='col-md-6'>
-                    <img src="http://bpcs.com/img/ian_pic.jpg" alt="" class="img-responsive img-circle" />
+                    <img src="assets/img/ian_pic.jpg" alt="" class="img-responsive img-circle" />
                     </div>
                     <h3>Ian Hunt</h3>
-                    <h4>Recruiting Manager</h4>
+                    <h4>Managing Director</h4>
                     <div class='text-content'>
                         <p>Ian Hunt brings more than 20 years of experience as a customer support leader building global multi-tiered and multi-channel support solutions that optimize customer satisfaction. Ian is responsible for the management of our Customer Experience & Support Business and has a background in Service Management, Customer Experience Design, Technical support, Contact Center Solutions, and Operations.
                         </p>
@@ -351,7 +351,8 @@
                     <h3>Contact Us</h3>
                     <ul class='mine'>
                         <li><i class="fa fa-phone fa-fw"></i>206.455.8326</li>
-                        <li><i class="fa fa-map-marker fa-fw"></i><a href="work.html">info@bpcs.com</a></li>
+                        <li><i class="fa fa-envelope-o fa-fw"></i><a href="work.html">info@bpcs.com</a></li>
+                        <li><i class="fa fa-map-marker fa-fw"></i>350 106th Ave NE<br>Bellevue, WA 98004</li>
                     </ul>
                 </div>
             </div>
