--- a/bpcs-v4/connect.html
+++ b/bpcs-v4/connect.html
@@ -368,6 +368,7 @@
                 <ul class='mine'>
                     <li><i class="fa fa-phone fa-fw"></i>206.455.8326</li>
                     <li><i class="fa fa-map-marker fa-fw"></i><a href="work.html">info@bpcs.com</a></li>
+                    <li><i class="fa fa-map-marker fa-fw"></i>350 106th Ave NE<br>Bellevue, WA 98004</li>
                 </ul>
             </div>
         </div>
