--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -149,7 +149,7 @@
     
     <section id="clients" class='container-alt-gray'>
     <div class="container">
-        <h2>CLIENTS</h2>
+        <h2>FEATURED CLIENTS</h2>
         <div class="row">
             <div class="col-md-3">
                 <img src="assets/img/ms_logo.png" alt="" class="img-responsive" />
