--- a/bpcs-v4/connect.html
+++ b/bpcs-v4/connect.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <title>Welcome | Blueprint Consulting Services - Bellevue, Washington</title>
+    <meta name="description" content="Blueprint Consulting Services provides strategic consulting and end-to-end technical solutions. We are industry experts who plan strategically and deliver exceptional results.">
+    <meta name="keywords" content="technology consulting bellevue, blue print bellevue, blue print consulting, blue print consulting bellevue, blueprint bellevue, consulting bellevue, technology consulting, Microsoft partner, Microsoft preferred supplier, microsoft vendor, Blueprint Consulting Services LLC, Bellevue WA technology consultants, technology consulting, business consulting, consulting, Blueprint Consulting, Blueprint Consulting Services, Blueprint, technical solutions, best industry talent, Office 365, SharePoint, cloud, collaboration, application development, customer support, IT, digital marketing, consulting in Bellevue WA">
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
@@ -213,14 +214,14 @@
             <div id="vertical-filter" class="status-container">
                 <ul class="content">
                     <li class="item"><a href="#socialmedia">SOCIAL MEDIA</a></li>
-                    <li class="item"><a href='#locations'>LOCATION</a></li>
                     <li class="item"><a href="#blog">BLOG</a></li>
                     <li class="item"><a href="#contact">CONTACT US</a></li>
+                    <li class="item"><a href='#locations'>LOCATION</a></li>
                 </ul>
             </div>
         </nav>
     </div>
-    <section id="social" class='container-alt'>
+    <section id="social" class='container-alt-gray'>
         <div class="container">
             <div class="row ">
                 <h2>SOCIAL MEDIA</h2>
@@ -252,14 +253,6 @@
         </div>
     </section>
     <!--SERVICES SECTION END  -->
-    <section id='locations' class='container-alt-gray'>
-        <div class="container">
-            <h2>LOCATION</h2>
-        </div>
-        <div>
-            <div id='map'></div>
-        </div>
-    </section>
     <!--WORKS / PORTFOLIO SECTION END  -->
     <section id="blog" class='container-alt'>
         <div class="container">
@@ -337,6 +330,35 @@
             </div>
         </div>
     </section>
+    <section id='locations' class='container-alt'>
+        <div class="container">
+            <h2>LOCATION</h2>
+            <div class='row'>
+                <div class='col-md-4 col-md-offset-3'>
+                    <address>
+                        <strong>ADDRESS</strong>
+                        <br> 350 106th Ave NE, Second Floor
+                        <br> Bellevue, WA 98004
+                    </address>
+                <a href='https://www.google.com/maps/place/350+106th+Ave+NE,+Bellevue,+WA+98004/@47.613462,-122.1985,17z/data=!3m1!4b1!4m2!3m1!1s0x54906c87e08f7b51:0x3b75ba9bec8c3275' target='blank'>Get Directions</a>
+                </div>
+                <div class='col-md-5'>
+                    <address>
+                        <strong>PHONE</strong>
+                        <br><i class="fa fa-phone fa-fw"></i>206.455.8326
+                    </address>
+
+                    <address>
+                        <strong>EMAIL</strong>
+                        <br><i class="fa fa-envelope-o fa-fw"></i>info@bpcs.com
+                    </address>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div id='map'></div>
+        </div>
+    </section>
     <!-- CLIENTS SECTION END-->
     <footer class='site-footer'>
         <div class='col-md-offset-3'>
@@ -367,8 +389,9 @@
                 <h3>Contact Us</h3>
                 <ul class='mine'>
                     <li><i class="fa fa-phone fa-fw"></i>206.455.8326</li>
-                    <li><i class="fa fa-map-marker fa-fw"></i><a href="work.html">info@bpcs.com</a></li>
-                    <li><i class="fa fa-map-marker fa-fw"></i>350 106th Ave NE<br>Bellevue, WA 98004</li>
+                    <li><i class="fa fa-envelope-o fa-fw"></i><a href="work.html">info@bpcs.com</a></li>
+                    <li><i class="fa fa-map-marker fa-fw"></i>350 106th Ave NE
+                        <br>Bellevue, WA 98004</li>
                 </ul>
             </div>
         </div>
