--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <title>Welcome | Blueprint Consulting Services - Bellevue, Washington</title>
+    <meta name="description" content="Blueprint Consulting Services provides strategic consulting and end-to-end technical solutions. We are industry experts who plan strategically and deliver exceptional results.">
+    <meta name="keywords" content="technology consulting bellevue, blue print bellevue, blue print consulting, blue print consulting bellevue, blueprint bellevue, consulting bellevue, technology consulting, Microsoft partner, Microsoft preferred supplier, microsoft vendor, Blueprint Consulting Services LLC, Bellevue WA technology consultants, technology consulting, business consulting, consulting, Blueprint Consulting, Blueprint Consulting Services, Blueprint, technical solutions, best industry talent, Office 365, SharePoint, cloud, collaboration, application development, customer support, IT, digital marketing, consulting in Bellevue WA">
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
@@ -199,7 +200,7 @@
 
     <section id='careers' class='container-alt-gray'>
         <div class="container">
-            <h2>CAREERS</h2>
+            <h2>FEATURED CAREERS <a href='http://jobs-bpcs.icims.com/' target="blank"><small>View All</small></a></h2>
             <div class="row">
             
                 <div class="col-md-4">
