--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <title>Welcome | Blueprint Consulting Services - Bellevue, Washington</title>
+    <meta name="description" content="Blueprint Consulting Services provides strategic consulting and end-to-end technical solutions. We are industry experts who plan strategically and deliver exceptional results.">
+    <meta name="keywords" content="technology consulting bellevue, blue print bellevue, blue print consulting, blue print consulting bellevue, blueprint bellevue, consulting bellevue, technology consulting, Microsoft partner, Microsoft preferred supplier, microsoft vendor, Blueprint Consulting Services LLC, Bellevue WA technology consultants, technology consulting, business consulting, consulting, Blueprint Consulting, Blueprint Consulting Services, Blueprint, technical solutions, best industry talent, Office 365, SharePoint, cloud, collaboration, application development, customer support, IT, digital marketing, consulting in Bellevue WA">
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
@@ -65,7 +66,8 @@
     <section id="portfolio" class='container-alt-gray'>
         <div class="container">
             <div class="row">
-                <h2>FEATURED EXAMPLES</h2>
+                <h2>FEATURED EXAMPLES <a href='work.html'><small>View All</small></a></h2>
+
             </div>
             <div class="row">
                 <div class="col-md-6 case-study">
@@ -91,7 +93,7 @@
     
     <section id="blog" class='container-alt'>
         <div class="container">
-            <h2>WHAT WE ARE THINKING</h2>
+            <h2>WHAT WE ARE THINKING <a href='connect.html'><small>View All</small></a></h2>
             <div class="row">
                 <div class='col-md-3'>
                     <h2 class='accent-heading'>What it's like inside our minds...</h2>
@@ -156,7 +158,7 @@
                 <h3>Contact Us</h3>
                 <ul class='mine'>
                     <li><i class="fa fa-phone fa-fw"></i>206.455.8326</li>
-                    <li><i class="fa fa-map-marker fa-fw"></i><a href="work.html">info@bpcs.com</a></li>
+                    <li><i class="fa fa-envelope-o fa-fw"></i><a href="work.html">info@bpcs.com</a></li>
                     <li><i class="fa fa-map-marker fa-fw"></i>350 106th Ave NE<br>Bellevue, WA 98004</li>
                 </ul>
             </div>
