--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -200,7 +200,21 @@
 
     <section id='careers' class='container-alt-gray'>
         <div class="container">
-            <h2>FEATURED CAREERS <a href='http://jobs-bpcs.icims.com/' target="blank"><small>View All</small></a></h2>
+            <div class="row">
+                <div class='col-md-5'>
+                    <h2>FEATURED CAREERS <a href='http://jobs-bpcs.icims.com/' target="blank"><small>View All</small></a></h2>
+                </div>
+                <div class='col-md-7'>
+                        <div class='share-link pull-right text-left'>
+                            <div class='col-md-1'><i class="fa fa-share-alt fa-2x show-link"></i></div>
+                            <div class='col-md-8 share-url'><samp>http://www.bpcs.com/work.html#careers</samp></div>
+                            <div class='col-md-3 share-copy'><small>Copy To Clipboard</small></div>
+                        </div>
+                </div>
+            </div>
+
+
+
             <div class="row">
             
                 <div class="col-md-4">
@@ -210,7 +224,7 @@
                         <div class='col-md-8'>
                             <h4>Infrastructure Engineer</h4>
                             <p>Seattle, WA</p>
-                            <a href='https://jobs-bpcs.icims.com/jobs/1120/infrastructure-engineer/job?in_iframe=1'>View job</a>
+                            <a href='https://jobs-bpcs.icims.com/jobs/1120/infrastructure-engineer/job?in_iframe=1'>View job <i class="fa fa-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
                 </div>
@@ -221,7 +235,7 @@
                         <div class='col-md-8'>
                             <h4>Software Developer II</h4>
                             <p>Bellevue, WA</p>
-                            <a href='https://jobs-bpcs.icims.com/jobs/1122/software-developer-ii/job?in_iframe=1'>View job</a>
+                            <a href='https://jobs-bpcs.icims.com/jobs/1122/software-developer-ii/job?in_iframe=1'>View job <i class="fa fa-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
                 </div>
@@ -233,7 +247,7 @@
                         <div class='col-md-8'>
                             <h4>Java Engineer</h4>
                             <p>Seattle, WA</p>
-                            <a href='https://jobs-bpcs.icims.com/jobs/1119/java-engineer/job?in_iframe=1'>View job</a>
+                            <a href='https://jobs-bpcs.icims.com/jobs/1119/java-engineer/job?in_iframe=1'>View job <i class="fa fa-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
                 </div>
@@ -283,7 +297,8 @@
                     <ul class='mine'>
                         <li><i class="fa fa-phone fa-fw"></i>206.455.8326</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i><a href="work.html">info@bpcs.com</a></li>
-                        <li><i class="fa fa-map-marker fa-fw"></i>350 106th Ave NE<br>Bellevue, WA 98004</li>
+                        <li><i class="fa fa-map-marker fa-fw"></i>350 106th Ave NE
+                            <br>Bellevue, WA 98004</li>
                     </ul>
                 </div>
             </div>
