--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -214,7 +214,7 @@ accountability for getting those issues fixed.</p>
         <div class="row text-center">
            <div class='col-md-6 col-md-offset-3'>
             <h1>Interested in working with us?</h1>
-                    <button onClick="location.href='team.html'" class="btn btn-primary btn-block">Check out the team</button>
+                    <button onClick="location.href='team.html'" class="btn btn-primary btn-block btn-callToAction">Check out the team</button>
                 </div>
             </div>
         </div>
