--- a/bpcs-v4/connect.html
+++ b/bpcs-v4/connect.html
@@ -264,7 +264,6 @@
                         <div class='share-link pull-right text-left'>
                             <div class='col-md-1'><i class="fa fa-share-alt fa-2x show-link"></i></div>
                             <div class='col-md-8 share-url'><samp>http://www.bpcs.com/work.html#blog</samp></div>
-                            <div class='col-md-3 share-copy'><small>Copy To Clipboard</small></div>
                         </div>
                 </div>
             </div>
@@ -351,7 +350,7 @@
                         <br> 350 106th Ave NE, Second Floor
                         <br> Bellevue, WA 98004
                     </address>
-                <a href='https://www.google.com/maps/place/350+106th+Ave+NE,+Bellevue,+WA+98004/@47.613462,-122.1985,17z/data=!3m1!4b1!4m2!3m1!1s0x54906c87e08f7b51:0x3b75ba9bec8c3275' target='blank'>Get Directions</a>
+                <a href='https://www.google.com/maps/place/350+106th+Ave+NE,+Bellevue,+WA+98004/@47.613462,-122.1985,17z/data=!3m1!4b1!4m2!3m1!1s0x54906c87e08f7b51:0x3b75ba9bec8c3275' target='blank'>Get Directions <i class="fa fa-arrow-right fa-fw"></i></a>
                 </div>
                 <div class='col-md-5'>
                     <address>
