--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -208,7 +208,6 @@
                         <div class='share-link pull-right text-left'>
                             <div class='col-md-1'><i class="fa fa-share-alt fa-2x show-link"></i></div>
                             <div class='col-md-8 share-url'><samp>http://www.bpcs.com/work.html#careers</samp></div>
-                            <div class='col-md-3 share-copy'><small>Copy To Clipboard</small></div>
                         </div>
                 </div>
             </div>
@@ -262,7 +261,7 @@
             <div class="row text-center">
                 <div class='col-md-6 col-md-offset-3'>
                     <h1>Ready to get started?</h1>
-                    <button onClick="location.href='connect.html'" class="btn btn-primary btn-block">Connect with us</button>
+                    <button onClick="location.href='connect.html'" class="btn btn-primary btn-block btn-callToAction">Connect with us</button>
                 </div>
             </div>
         </div>
