--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -163,11 +163,11 @@ accountability for getting those issues fixed.</p>
         <h2>FEATURED CLIENTS</h2>
         <div class="row">
             <ul class='client-list'>
-                <li>Microsoft</li>
-                <li>Nordstrom</li>
-                <li>Expedia</li>
-                <li>Hulu</li>
-                <li>Edifecs</li>
+                <li><img src='assets/img/client_logos/microsoft-logo.png'></li>
+                <li><img src='assets/img/client_logos/nordstrom-logo.png'></li>
+                <li><img src='assets/img/client_logos/expedia-logo.png'></li>
+                <li><img src='assets/img/client_logos/hulu-logo.png'></li>
+                <li><img src='assets/img/client_logos/edifecs-logo.png'></li>
                 <li>Beqom</li>
                 <li>CPXI</li>
                 <li>Creative Microsystems</li>
