--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -168,10 +168,10 @@ accountability for getting those issues fixed.</p>
                 <li><img src='assets/img/client_logos/expedia-logo.png'></li>
                 <li><img src='assets/img/client_logos/hulu-logo.png'></li>
                 <li><img src='assets/img/client_logos/edifecs-logo.png'></li>
-                <li>Beqom</li>
-                <li>CPXI</li>
-                <li>Creative Microsystems</li>
-                <li>Tirebuyer.com</li>
+                <li><img src='assets/img/client_logos/beqom-logo.png'></li>
+                <li><img src='assets/img/client_logos/cpxi-logo.png'></li>
+                <li><img src='assets/img/client_logos/creative-micro-logo.png'></li>
+                <li><img src='assets/img/client_logos/tirebuyer-logo.png'></li>
                 <li>EY</li>
                 <li>GotAppraisals</li>
                 <li>Identropy</li>
