--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -172,13 +172,12 @@ accountability for getting those issues fixed.</p>
                 <li><img src='assets/img/client_logos/cpxi-logo.png'></li>
                 <li><img src='assets/img/client_logos/creative-micro-logo.png'></li>
                 <li><img src='assets/img/client_logos/tirebuyer-logo.png'></li>
-                <li>EY</li>
-                <li>GotAppraisals</li>
-                <li>Identropy</li>
-                <li>Milliman</li>
-                <li>PopCap</li>
-                <li>Provident Trust Group</li>
-                <li>Gibraltar Construction</li>
+                <li><img src='assets/img/client_logos/ey-logo.png'></li>
+                <li><img src='assets/img/client_logos/got-logo.png'></li>
+                <li><img src='assets/img/client_logos/identropy-logo.png'></li>
+                <li><img src='assets/img/client_logos/milliman-logo.png'></li>
+                <li><img src='assets/img/client_logos/popcap-logo.png'></li>
+                <li><img src='assets/img/client_logos/provident-logo.png'></li>
             </ul>
         </div>
 
