--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -114,7 +114,7 @@ accountability for getting those issues fixed.</p>
     <!--SERVICES SECTION END  -->
     <section class='container-alt'>
         <div class="container">
-            <h2>PORTFOLIO</h2>
+            <h2>CASE STUDIES</h2>
             <div class="row">
             
                 <div class="col-md-4">
