--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -242,6 +242,18 @@ accountability for getting those issues fixed.</p>
                 </div>
         </div>
 
+        <div class='row'>
+            <div class="col-md-4 text-center">
+                <img src='assets/img/client_logos/microsoft-partner-logo.png'>
+            </div>
+
+            <div class="col-md-4 text-center">
+                
+            </div>
+
+
+        </div>
+
     </div>
     </section>
     <section id="callToAction" class='container-alt-accent'>
