--- a/bpcs-v4/connect.html
+++ b/bpcs-v4/connect.html
@@ -205,6 +205,9 @@
                     <h1>CONNECT</h1>
                     <h2>We Are Here For You</h2>
                     <p class="p-cls"></p>
+                    <div class="row text-center">
+                        <div class='arrow bounce'></div>
+                    </div>
                 </div>
             </div>
         </div>
