--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -57,6 +57,9 @@
                     <h1>THE TEAM
                     <h2>Positive, Accountable & Creative</h2>
                     <p class="p-cls"></p>
+                    <div class="row text-center">
+                        <div class='arrow bounce'></div>
+                    </div>
                 </div>
 
             </div>
