--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -57,6 +57,9 @@
                     <h1>SOLUTIONS
                     <h2>Creating The Next Big Thing</h2>
                     <p class="p-cls"></p>
+                    <div class="row text-center">
+                        <div class='arrow bounce'></div>
+                    </div>
                 </div>
 
             </div>
