--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -58,6 +58,8 @@
                     <div class='col-md-6 col-md-offset-3'>
                         <button onClick="location.href='work.html'" class="btn btn-callToAction btn-block">See our solutions</button>
                     </div>
+                    <div class='arrow bounce'>
+                    </div>
                 </div>
             </div>
         </div>
