--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -125,7 +125,7 @@
 
                         <div class='read-more'>
                         <p>Kyle joined Blueprint as the VP of Operations after a distinguished career at Microsoft, where he served in key roles ranging from IT Business Unit Director to Customer Support Director to Customer Partner Experience Director, with a focus on cloud services.</p>
-                        <p>Kyle has a track record of solving complex business problems through a focus on people, process, and technology, using tools such as: ITIL-based frameworks, Six Sigma-based process improvement, support models, business tool development and company-wide frameworks, automation, and real-time dashboards. Kyle graduated from the University of Washington. In his free time, Kyle is an avid golfer, enjoys traveling (usually related to golfing), and spending time with his wife Amy, daughter Kaylee, and their very large dog Izzy.
+                        <p>Kyle has a track record of solving complex business problems through a focus on people, process, and technology, using tools such as: ITIL-based frameworks, Six Sigma-based process improvement, support models, business tool development and company-wide frameworks, automation, and real-time dashboards.
                         </p>
                         </div>
 
